hard-gists/1358794/run.log
=== Docker Run Log for 1358794 ===
Started at: Mi 29. Okt 12:09:48 CET 2025

[2025-10-29 12:09:49] START: Running container for 1358794
[2025-10-29 12:09:49] SUCCESS: Container 74a15f728b3eb6928c9694d30e4065858f3f82a4c8157c40a54dc4b6b20b0e3c started for 1358794
=== Container logs for 1358794 ===
  File "/snippet.py", line 21
    print "closing gui"
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1358794 ===
[2025-10-29 12:09:51] INFO: Container 74a15f728b3eb6928c9694d30e4065858f3f82a4c8157c40a54dc4b6b20b0e3c has stopped
